feat: jar class loader